--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:supportsRtl="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
@@ -51,7 +52,8 @@
                 android:resource="@xml/widget_info" />
         </receiver>
 
-        <service android:name=".service.WidgetService"/>
+        <service android:name=".service.WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
 
     </application>
 
